@@ -1,3 +1,9 @@
+2002-10-01  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tclProc.c (TclCreateProc): mask out VAR_UNDEFINED for
+	precompiled locals to support 8.3 precompiled code.
+	(Tcl_ProcObjCmd): correct 2002-09-26 fix to look for tclProcBodyType.
+
 2002-10-01  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* doc/socket.n: Mentioned that ports may be specified as serivce
